--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -170,8 +170,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .layer-3QrUeG,
 .theme-dark .typing-2GQL18,
 .channels-Ie2l6A,
-.theme-dark .wrapper-1Rf91z,
-.theme-dark .scroller-2TZvBN,
+.theme-dark .wrapper-3NnKdC,
+.theme-dark .scroller-1Bvpku,
 .container-3w7J-x,
 .theme-dark .chat-3bRxxu, 
 .theme-dark .chat-3bRxxu form, 
@@ -204,20 +204,20 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: white;
 }
 
-.folderIconWrapper-226oVY {
+.folderIconWrapper-1_bOZe {
     border-radius: 0px;
     overflow: visible;
 }
 
-.theme-dark .expandedFolderBackground-2sPsd-,
-.theme-dark .expandedFolderBackground-2sPsd-.hover-2ji_A7 {
+.theme-dark .expandedFolderBackground-1cujaW,
+.theme-dark .expandedFolderBackground-1cujaW.hover-2ji_A7 {
    border-radius: 7px;
    background-color: rgba(0, 0, 0, 0.327);
    height: 99%;
 }
 
-.theme-dark .folder-21wGz3,
-.theme-dark .folder-21wGz3.hover-2ji_A7 {
+.theme-dark .folder-1hbNCn,
+.theme-dark .folder-1hbNCn.hover-2ji_A7 {
     background-color: rgba(0, 0, 0, 0.427);
 }
 
@@ -249,7 +249,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     overflow: visible;
 }
 
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
     background: transparent;
 }
 
@@ -337,12 +337,12 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
     background-color: #121213;
     color: #008c99;
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
     background-color: #008c99;
 }
 
