--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -196,8 +196,8 @@
 .messages-3amgkR,
 .container-3w7J-x,
 .sidebar-2K8pFh,
-.theme-dark .wrapper-1Rf91z,
-.theme-dark .scroller-2TZvBN,
+.theme-dark .wrapper-3NnKdC,
+.theme-dark .scroller-1Bvpku,
 .container-2lgZY8,
 .theme-dark .chat-3bRxxu, 
 .theme-dark .chat-3bRxxu form, 
@@ -880,7 +880,7 @@
   background-color: #789dbf;
   padding: 4px 7px;
 }
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
   background: transparent;
 }
 .theme-dark .childWrapper-anI2G9 {
@@ -929,11 +929,11 @@
   background-color: #789dbf;
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
   background-color: black;
   color: #789dbf;
 }
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
   color: #fff;
   background-color: #789dbf;
 }
@@ -2130,13 +2130,13 @@
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #789dbf;
 }
-.theme-dark .expandedFolderBackground-2sPsd-, 
-.theme-dark .folder-21wGz3 {
+.theme-dark .expandedFolderBackground-1cujaW, 
+.theme-dark .folder-1hbNCn {
   background-color: rgba(0,0,0,0.42) !important; 
 		height: 49px;
 		border-radius: 19px;
 }
-.folder-21wGz3, .folderIconWrapper-226oVY {
+.folder-1hbNCn, .folderIconWrapper-1_bOZe {
   width: 49px;
   height: 49px;
 		border-radius: 0px;
