--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -195,8 +195,8 @@ background-color: #129b1a  !important;
 .messages-3amgkR,
 .container-3w7J-x,
 .sidebar-2K8pFh,
-.theme-dark .wrapper-1Rf91z,
-.theme-dark .scroller-2TZvBN,
+.theme-dark .wrapper-3NnKdC,
+.theme-dark .scroller-1Bvpku,
 .container-2lgZY8,
 .theme-dark .chat-3bRxxu, 
 .theme-dark .chat-3bRxxu form, 
@@ -907,7 +907,7 @@ background-color: #129b1a  !important;
   background-color: #129b1a;
   padding: 4px 7px;
 }
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
   background: transparent;
 }
 .theme-dark .childWrapper-anI2G9 {
@@ -956,11 +956,11 @@ background-color: #129b1a  !important;
   background-color: #129b1a;
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
   background-color: black;
   color: #129b1a;
 }
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
   color: #fff;
   background-color: #129b1a;
 }
@@ -2174,13 +2174,13 @@ background-color: #129b1a  !important;
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #129b1a;
 }
-.theme-dark .expandedFolderBackground-2sPsd-, 
-.theme-dark .folder-21wGz3 {
+.theme-dark .expandedFolderBackground-1cujaW, 
+.theme-dark .folder-1hbNCn {
   background-color: rgba(0,0,0,0.42) !important; 
 		height: 49px;
 		border-radius: 19px;
 }
-.folder-21wGz3, .folderIconWrapper-226oVY {
+.folder-1hbNCn, .folderIconWrapper-1_bOZe {
   width: 49px;
   height: 49px;
 		border-radius: 0px;
