--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -149,7 +149,7 @@
     background-color: rgb(0, 0, 0, 0.13);
 }
 
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
     background: none;
 }
 
@@ -185,28 +185,28 @@
 
 .icon-27yU2q,
 .childWrapper-anI2G9,
-.folderIconWrapper-226oVY,
+.folderIconWrapper-1_bOZe,
 .guildIcon-GuAC7C.iconInactive-98JN5i {
     border-radius: 25%;
 }
 
-.folder-21wGz3 {
+.folder-1hbNCn {
     background-color: rgba(0,0,0,0.4);
     border-radius: 25%;
 }
 
-.folder-21wGz3.hover-2ji_A7 {
+.folder-1hbNCn.hover-2ji_A7 {
     background-color: rgba(0,0,0,0.7);
 }
 
-.expandedFolderBackground-2sPsd- {
+.expandedFolderBackground-1cujaW {
     background-color: rgba(0,0,0,0.3);
     border-radius: 15px;
 }
 
 .guildsError-b7zR5H,
 .guildIconUnavailable-5PMHDN,
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
     border-radius: 20%;
 }
 
@@ -249,8 +249,8 @@
 
 .theme-dark .layer-3QrUeG,
 .container-2lgZY8,
-.wrapper-1Rf91z,
-.scroller-2TZvBN,
+.wrapper-3NnKdC,
+.scroller-1Bvpku,
 .privateChannels-1nO12o,
 .sidebar-2K8pFh,
 .scroller-1JbKMe,
@@ -1785,12 +1785,12 @@
     background-color: rgba(0, 0, 0, 0.22);
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
     background-color: black;
     color: #582060;
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
     color: #fff;
     background-color: #582060;
 }
