--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -918,9 +918,9 @@
 }
 
 /* Friends and DMS */
-.wrapper-1Rf91z,
-.scroller-2TZvBN,
-.guildSeparator-3s64Iy {
+.wrapper-3NnKdC,
+.scroller-1Bvpku,
+.guildSeparator-33mFX6 {
     background-color: transparent;
 }
 
@@ -991,9 +991,9 @@
 
 .icon-27yU2q,
 .childWrapper-anI2G9,
-.folderIconWrapper-226oVY,
-.folder-21wGz3,
-.circleIconButton-jET_ig,
+.folderIconWrapper-1_bOZe,
+.folder-1hbNCn,
+.circleIconButton-1QV--U,
 .headerIcon-2AzihC, 
 .multipleIconWrapper-1PjkRO {
     border-radius: 50px;
@@ -2110,12 +2110,12 @@
 }
 
 /* Chat Section(Last One) */
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
     color: #731838;
     background-color: black;
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
     color: #fff;
     background-color: #731838;
 }
@@ -2216,8 +2216,8 @@
     overflow: visible;
 }
 
-.folder-21wGz3,
-.expandedFolderBackground-2sPsd- {
+.folder-1hbNCn,
+.expandedFolderBackground-1cujaW {
     background-color: rgba(0, 0, 0, 0.22) !important;
 }
 
