--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -121,12 +121,12 @@
 .sidebar-2K8pFh,
 .container-2lgZY8,
 .theme-dark .layer-3QrUeG,
-.theme-dark .wrapper-1Rf91z,
-.theme-dark .scroller-2TZvBN,
+.theme-dark .wrapper-3NnKdC,
+.theme-dark .scroller-1Bvpku,
 .scroller-305q3I,
 .contentRegionScroller-26nc1e,
 .sidebarRegionScroller-3MXcoP,
-.scroller-2TZvBN {
+.scroller-1Bvpku {
 	background-color: transparent;
 }
 
@@ -144,7 +144,7 @@
 	background: rgba(0, 0, 0, 0.6);
 }
 
-.wrapper-1Rf91z {
+.wrapper-3NnKdC {
 	margin: 38px 0;
 	border-radius: 0;
 }
@@ -153,7 +153,7 @@
 	width: 68px;
 }
 
-.scroller-2TZvBN {
+.scroller-1Bvpku {
 	padding: 12px 0;
 }
 
@@ -587,7 +587,7 @@
 	border-radius: 50px;
 }
 
-.wrapper-1Rf91z .unread-1xRYoj,
+.wrapper-3NnKdC .unread-1xRYoj,
 .unread-1xRYoj {
 	display: none;
 }
@@ -603,7 +603,7 @@
 }
 
 .icon-27yU2q,
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
 	border-radius: 50px;
 }
 
@@ -675,7 +675,7 @@
 	color: silver;
 }
 
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
 	background: transparent;
 }
 
@@ -738,20 +738,20 @@
 
 /* Chat Section */
 
-.folderIconWrapper-226oVY {
+.folderIconWrapper-1_bOZe {
     border-radius: 50px;
     overflow: visible;
 }
 
-.theme-dark .expandedFolderBackground-2sPsd-,
-.theme-dark .expandedFolderBackground-2sPsd-.hover-2ji_A7 {
+.theme-dark .expandedFolderBackground-1cujaW,
+.theme-dark .expandedFolderBackground-1cujaW.hover-2ji_A7 {
    border-radius: 7px;
    background-color: rgba(0, 0, 0, 0.327);
    height: 99%;
 }
 
-.theme-dark .folder-21wGz3,
-.theme-dark .folder-21wGz3.hover-2ji_A7 {
+.theme-dark .folder-1hbNCn,
+.theme-dark .folder-1hbNCn.hover-2ji_A7 {
     background-color: rgba(0, 0, 0, 0.427);
 }
 
@@ -883,21 +883,21 @@
 	border: none;
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
 	color: white;
 	background: linear-gradient(5deg, transparent 42%, rgba(204, 227, 246, 0.8) 100%);
 	border: 2px solid rgba(204, 227, 246, 0.60);
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.60);
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
 	color: white;
 	background: linear-gradient(5deg, transparent 42%, rgba(204, 227, 246, 0.8) 100%);
 	border: 2px solid rgba(204, 227, 246, 0.60);
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.60);
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
 	background-color: #44bd87;
 }
 
