--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -2240,7 +2240,7 @@
   border-radius: 4px;
 }
 
-.guildSeparator-3s64Iy, .scroller-2TZvBN, .wrapper-1Rf91z {
+.guildSeparator-33mFX6, .scroller-1Bvpku, .wrapper-3NnKdC {
   background: none;
 }
 
@@ -2248,17 +2248,17 @@
   display: none;
 }
 
-.icon-27yU2q, .folder-21wGz3, .folderIconWrapper-226oVY, .childWrapper-anI2G9, .circleIconButton-jET_ig,
+.icon-27yU2q, .folder-1hbNCn, .folderIconWrapper-1_bOZe, .childWrapper-anI2G9, .circleIconButton-1QV--U,
 .guildsError-b7zR5H, .theme-dark .guildIconUnavailable-5PMHDN {
   border-radius: 4px;
 }
 
-.expandedFolderBackground-2sPsd- {
+.expandedFolderBackground-1cujaW {
   border-radius: 4px;
   background-color: transparent !important;
 }
 
-.folder-21wGz3 {
+.folder-1hbNCn {
   background-color: rgba(0, 0, 0, .3) !important;
 }
 
@@ -2281,12 +2281,12 @@
   z-index: 1;
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
   color: #805d4c;
   background-color: rgba(0, 0, 0, .46);
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
   background-color: #805d4c;
 }
 
