--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -1093,8 +1093,8 @@
 
 .privateChannels-1nO12o,
 .scroller-1JbKMe,
-.theme-dark .wrapper-1Rf91z,
-.theme-dark .scroller-2TZvBN {
+.theme-dark .wrapper-3NnKdC,
+.theme-dark .scroller-1Bvpku {
     background-color: transparent;
 }
 
@@ -1336,7 +1336,7 @@
     background-color: #6b82ce;
 }
 
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
     background-color: transparent;
 }
 
@@ -1345,20 +1345,20 @@
 }
 
 /* Chat Section(Last Part) */
-.folderIconWrapper-226oVY {
+.folderIconWrapper-1_bOZe {
     border-radius: 0px;
     overflow: visible;
 }
 
-.theme-dark .expandedFolderBackground-2sPsd-,
-.theme-dark .expandedFolderBackground-2sPsd-.hover-2ji_A7 {
+.theme-dark .expandedFolderBackground-1cujaW,
+.theme-dark .expandedFolderBackground-1cujaW.hover-2ji_A7 {
    border-radius: 7px;
    background-color: rgba(0, 0, 0, 0.327);
    height: 99%;
 }
 
-.theme-dark .folder-21wGz3,
-.theme-dark .folder-21wGz3.hover-2ji_A7 {
+.theme-dark .folder-1hbNCn,
+.theme-dark .folder-1hbNCn.hover-2ji_A7 {
     background-color: rgba(0, 0, 0, 0.427);
 }
 
@@ -1472,13 +1472,13 @@
     color: silver;
 }
 
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
     color: white;
     background-color: #6b82ce;
     border-radius: 40px !important;
 }
 
-.circleIconButton-jET_ig.selected-ugP_am {
+.circleIconButton-1QV--U.selected-ugP_am {
     color: white;
     background-color: #6b82ce;
     border: 2px solid rgba(255,255,255,.182);
