--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -15,6 +15,20 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     --avatar-size: 55px;
 }
 
+
+
+.repliedMessage-VokQwo .username-1A8OIy {
+    margin-left: 2px;
+}
+
+.cozy-3raOZG .repliedMessage-VokQwo {
+    margin-left: 70px;
+}
+
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK {
+    padding-left: 3px;
+}
+
 .hljs,
 .inline,
 .hljs :-webkit-any(ol, li, span),
@@ -342,7 +356,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: #008c99;
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
     background-color: #008c99;
 }
 
@@ -1628,6 +1642,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .mentioned-xhSam7 .markup-2BOw-j{
     margin-left: -1px;
     top: unset;
+    padding-left: 58px;
 }
 
 .embedContentInner-FBnk7v.markup-2BOw-j {
@@ -1640,6 +1655,16 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .wrapperAudio-1jDe0Q {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: transparent;
+    margin-left: 52px;
+    padding-left: 1px;
+}
+
+.imageWrapper-2p5ogY {
+    margin-left: 56px;
+}
+
+.theme-dark .embedFull-2tM8--[style*="border-color: rgb(100, 65, 164);"] .imageWrapper-2p5ogY {
+    margin-left: unset;
 }
 
 .buttonContainer-KtQ8wc>* {
@@ -1690,6 +1715,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .mentioned-xhSam7 .mention {
     background-color: rgba(26, 22, 22, 0.496) !important; 
     padding: 3.82px;
+}
+
+.theme-dark .mentioned-xhSam7 .reactions-12N0jA{
+    margin-left: 56px;
 }
 
 .botTagRegular-2HEhHi,
