--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -23,6 +23,11 @@
   top: -3px;
 }
 
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK {
+  top: 9px;
+  position: relative;
+}
+
 .repliedTextPreview-2NBljf .repliedTextPlaceholder-dmN7D1 {
   overflow: visible;
   margin-bottom: 0px;
@@ -933,7 +938,7 @@
   background-color: black;
   color: #789dbf;
 }
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
   color: #fff;
   background-color: #789dbf;
 }
