--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -11,6 +11,14 @@
   background-image: url(https://images5.alphacoders.com/106/1066789.png);
 }
 
+.executedCommand-2GE3w2, .repliedMessage-VokQwo, .threadMessageAccessory-1pYyA- {
+  margin-left: 17px;
+}
+.repliedTextPreview-2NBljf {
+  position: relative;
+  top: -1px;
+}
+
 .wrapper-2Gsate {
   background-color: transparent;
 }
@@ -2286,7 +2294,7 @@
   background-color: rgba(0, 0, 0, .46);
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
   background-color: #805d4c;
 }
 
