--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -12,7 +12,10 @@
 .cozy-3raOZG .repliedMessage-VokQwo {
   margin-bottom: var(--reply-spacing);
 }
-
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK {
+  top: 9px;
+  position: relative;
+}
 .repliedMessage-VokQwo {
   --reply-spacing: 10px;
 }
@@ -960,7 +963,7 @@ background-color: #129b1a  !important;
   background-color: black;
   color: #129b1a;
 }
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
   color: #fff;
   background-color: #129b1a;
 }
