--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -12,7 +12,10 @@
 .cozy-3raOZG .repliedMessage-VokQwo {
   margin-bottom: var(--reply-spacing);
 }
-
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK {
+  top: 9px;
+  position: relative;
+}
 .repliedMessage-VokQwo {
   --reply-spacing: 10px;
 }
@@ -967,7 +970,7 @@ background-color: #ca9e73  !important;
   background-color: black;
   color: #ca9e73;
 }
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
   color: #fff;
   background-color: #ca9e73;
 }
