--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -1489,7 +1489,7 @@
     border-radius: 40px !important;
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
     color: white;
     background-color: #f4acc5;
     border: 2px solid rgba(255,255,255,.182);
