--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1478,7 +1478,7 @@
     border-radius: 40px !important;
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
     color: white;
     background-color: #8da0e0;
     border: 2px solid rgba(255,255,255,.182);
