--- a/My_Theme_Collection/AkameGaKill.theme.css
+++ b/My_Theme_Collection/AkameGaKill.theme.css
@@ -11,6 +11,14 @@
   background-image: url(https://images5.alphacoders.com/542/542751.jpg);
 }
 
+.executedCommand-2GE3w2, .repliedMessage-VokQwo, .threadMessageAccessory-1pYyA- {
+  margin-left: 17px;
+}
+.repliedTextPreview-2NBljf {
+  position: relative;
+  top: -1px;
+}
+
 .settingCard-3w2mVL.active-1ytUzX {
   background: rgba(0, 0, 0, .7);
 }
@@ -2278,7 +2286,7 @@
   background-color: rgba(0, 0, 0, .46);
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
   background-color: #9b2742;
 }
 
