--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -10,6 +10,18 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     font-family: 'Livvic', sans-serif;
 }
 
+.repliedMessage-VokQwo .username-1A8OIy {
+    margin-left: 2px;
+}
+
+.cozy-3raOZG .repliedMessage-VokQwo {
+    margin-left: 70px;
+}
+
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK {
+    padding-left: 3px;
+}
+
 :root {
     --avatar-size: 55px;
 }
@@ -361,7 +373,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: #728e3d;
 }
 
-.circleIconButton-1QV--U.selected-ugP_am {
+.circleIconButton-1QV--U.selected-1JjBPm {
     background-color: #728e3d;
 }
 
@@ -1660,6 +1672,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .mentioned-xhSam7 .markup-2BOw-j{
     margin-left: -1px;
     top: unset;
+    padding-left: 58px;
 }
 
 .embedContentInner-FBnk7v.markup-2BOw-j {
@@ -1672,6 +1685,19 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .wrapperAudio-1jDe0Q {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: transparent;
+    margin-left: 52px;
+    padding-left: 1px;
+}
+
+.imageWrapper-2p5ogY {
+    margin-left: 56px;
+}
+
+.theme-dark .embedFull-2tM8--[style*="border-color: rgb(100, 65, 164);"] .imageWrapper-2p5ogY {
+    margin-left: unset;
+}
+.embedThumbnail-2Y84-K img {
+    margin-left: -5px;
 }
 
 .buttonContainer-KtQ8wc>* {
@@ -1722,6 +1748,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .mentioned-xhSam7 .mention {
     background-color: rgba(26, 22, 22, 0.496) !important; 
     padding: 3.82px;
+}
+
+.theme-dark .mentioned-xhSam7 .reactions-12N0jA{
+    margin-left: 56px;
 }
 
 .botTagRegular-2HEhHi,
